# symvault

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_IT.md  ROADMAP.md  install.sh  pyproject.toml  symvault.py  symvault_lib.py  uninstall.sh  vault.py  vault_lib.py
.github/workflows/: ci.yml
tests/: test_vault.py
