[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-dedup"
version = "1.0.0"
description = "Content-addressable file deduplication with symlinks and SQLite"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.scripts]
symvault = "symvault:cli"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["symvault", "symvault_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
