[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-dedup"
version = "1.0.0"
description = "Content-addressable file deduplication with symlinks and SQLite"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["click>=8.0"]
authors = [
    {name = "Davide Di Giovanni"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.scripts]
symvault = "symvault:cli"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/DavideDiGiovanni/symvault"
Repository = "https://github.com/DavideDiGiovanni/symvault"

[tool.setuptools]
py-modules = ["symvault", "symvault_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
